# BankHaskell

bankSimulator/: bankSimulator.cabal
bankSimulator/src/: Main.hs  account.hs
bankSimulator/tests/: tests.hs
