name:                bankSimulator
version:             0.1.0.0
synopsis:            Simple bank simulator
description:         Please see README.md
homepage:            https://github.com/githubuser/bankSimulator#readme
license:             BSD3
license-file:        LICENSE
author:              Lilian Breidenbach
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  exposed-modules:     Account
  build-depends:       base >= 4.7 && <5,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010

executable bankSimulator
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2
  build-depends:       base >= 4.7 && < 5,
                       bankSimulator,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       bankSimulator,
                       hspec
  default-language:    Haskell2010
